# TeachSTM32

./: .gitignore
sources/Samples/30 Touch/: CMakeLists.txt
sources/Samples/30 Touch/BSP/: GT811.c
sources/Samples/30 Touch/Inc/: dma.h  mxconstants.h  stm32f7xx_hal_conf.h
sources/Samples/30 Touch/MDK-ARM/: STM32F746I.uvguix.Sasha7b9  STM32F746I.uvoptx  STM32F746I.uvprojx  startup_stm32f746xx.lst
sources/Samples/30 Touch/Src/: dma.cpp  dma2d.cpp  main.c  main.cpp  usart.c  usart.cpp
sources/Test/: CMakeLists.txt  Test.uvguix.Sasha7b9  Test.uvoptx  Test.uvprojx
sources/Test/Fonts/: fonts.h
sources/Test/Listings-Debug/: STM32F746I Configuration.map  startup_stm32f746xx.lst
sources/Test/MDK-ARM/: STM32F746I.uvoptx  STM32F746I.uvprojx
sources/Test/Objects-Debug/: STM32F746I Configuration.axf  STM32F746I Configuration.build_log.htm  STM32F746I Configuration.htm  STM32F746I Configuration.lnp  Test_Debug.dep  dma.d  dma2d.d  fmc.d  gpio.d  gt811.d  i2c.d  image.d  ltdc.d  main.d  startup_stm32f746xx.d  stm32746g_lcd.d  stm32746g_sdram.d  stm32f7xx_hal.d  stm32f7xx_hal_cortex.d  stm32f7xx_hal_dma.d  stm32f7xx_hal_dma2d.d  stm32f7xx_hal_dma_ex.d  stm32f7xx_hal_flash.d  stm32f7xx_hal_flash_ex.d  stm32f7xx_hal_gpio.d  stm32f7xx_hal_i2c.d  stm32f7xx_hal_i2c_ex.d  stm32f7xx_hal_ltdc.d  stm32f7xx_hal_msp.d  stm32f7xx_hal_pwr.d  stm32f7xx_hal_pwr_ex.d  stm32f7xx_hal_rcc.d  stm32f7xx_hal_rcc_ex.d  stm32f7xx_hal_sdram.d  stm32f7xx_hal_uart.d  stm32f7xx_it.d  stm32f7xx_ll_fmc.d  system_stm32f7xx.d  ts_i2c.d  usart.d
sources/Test/RTE/_Debug/: RTE_Components.h
sources/Test/Src/: gpio.cpp  main.cpp  usart.cpp
sources/Test/Src/Display/: Display.cpp  Display.h
sources/Test/Src/Hardware/: Timer.h  stm32f7xx_hal_conf.h
(+44 files in other folders)
